--- a/Apps/Home/View/Public/head.html
+++ b/Apps/Home/View/Public/head.html
@@ -1,3 +1,16 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="__PUBLIC__/law_home/style/index.css">
+    <link rel="stylesheet" href="__PUBLIC__/law_home/style/comm.css">
+    <link rel="stylesheet" href="__PUBLIC__/law_home/style/tui.css">
+    <script src="__PUBLIC__/law_home/lib/jquery.min.js" ></script>
+    <script src="__PUBLIC__/law_home/lib/respond.js"></script>
+    <title>法学院-淮南师范学院</title>
+</head>
+<body>
+<!-- header -->
 <div class="header">
     <div class="head">
         <div class="container">
