--- a/Apps/Home/View/Public/head.html
+++ b/Apps/Home/View/Public/head.html
@@ -9,6 +9,11 @@
             </div>
             <div class="right">
                 <!-- search -->
+                <div class="search">
+                    <form action="" method="">
+                        <input type="text" name="keyword">
+                    </form>
+                </div>
             </div>
         </div>
     </div>
