--- a/Public/law_home/style/comm.css
+++ b/Public/law_home/style/comm.css
@@ -19,6 +19,19 @@ ul, li{list-style: none;margin: 0;padding: 0;}
   float: left;
   margin-top: 30px;
 }
+/*  搜索  */
+.header .head .right{
+	float: right;
+}
+.header .head .search{
+	background-color: #fff;
+	width: 220px;
+	height: 40px;
+	margin-top: 70px;
+}
+.header .head .search input{
+	
+}
 .header .nav{
   height: 60px;
   background-color: #fff;
