--- a/Apps/Home/View/Public/head.html
+++ b/Apps/Home/View/Public/head.html
@@ -30,7 +30,8 @@
         <div class="container">
             <!-- nav content -->
             <ul>
-                <li class="active"><a href="__APP__/Home/Index/index/id/{$navList[0]['class_id']}">{$navList[0]['name']}</a></li>
+                <li class="active"><a href="#">网站首页</a></li>
+                <!--<li class="active"><a href="__APP__/Home/Index/index/id/{$navList[0]['class_id']}">{$navList[0]['name']}</a></li>-->
 
                 <volist name="navList" id="nav" offset="1" >
                     <li><a href="__APP__/Home/Index/index/id/{$nav.class_id}">{$nav.name}</a></li>
