--- a/Apps/Home/View/Public/head.html
+++ b/Apps/Home/View/Public/head.html
@@ -34,7 +34,7 @@
                 <!--<li class="active"><a href="__APP__/Home/Index/index/id/{$navList[0]['class_id']}">{$navList[0]['name']}</a></li>-->
 
                 <volist name="navList" id="nav" offset="1" >
-                    <li><a href="__APP__/Home/Index/index/id/{$nav.class_id}">{$nav.name}</a></li>
+                    <li><a href="__APP__/Home/Index/index/id/{$nav.class_id}">{$nav.class_name}</a></li>
                 </volist>
                 <!--<volist name="navList" id="nav" offset="1" length="7">
                     <li><a href="__APP__/Home/{$nav.type}/news/id/{$nav.class_id}">{$nav.name}</a></li>
