--- a/Apps/Home/View/Index/index.html
+++ b/Apps/Home/View/Index/index.html
@@ -1,6 +1,6 @@
 
     <include file="./Apps/Home/View/Public/head.html" />
-
+    <link rel="stylesheet" href="__PUBLIC__/law_home/style/index.css">
     <!-- 轮播大图 -->
     <div class="carousel_figure" id="carousel_figure">
       <span id="carousel_figure_next"><</span>
@@ -197,9 +197,9 @@
       </div>
     </div>
 
+    <!-- footer -->
+    <include file="./Apps/Home/View/Public/footer.html" />
 
-
-    <!--js-->
 
     <script type="text/javascript">
       // 轮播图
@@ -264,5 +264,3 @@
       })
 
     </script>
-    <!-- footer -->
-    <include file="./Apps/Home/View/Public/footer.html" />
