--- a/Public/law_home/style/content.css
+++ b/Public/law_home/style/content.css
@@ -30,7 +30,7 @@
   color: #333;
   font-family: 'Microsoft YaHei';
   text-align: center;
-  padding: 9px 0;
+  padding: 10px 0;
   display: block;
   border-bottom: 2px solid #f5f5f5;
   font-size: 16px;
@@ -73,6 +73,9 @@
   text-decoration: none;
   padding: 0 6px;
 }
+.right_header .breadcrumb li span{
+  padding: 0 6px;
+}
 .right_header .breadcrumb li a:hover{
   color: #6F0D0C;
 }
@@ -84,7 +87,7 @@
 .right_main ul li{
   font-size: 14px;
   font-family: 'Microsoft YaHei';
-  list-style: disc;
+  list-style: disc inside;
   position: relative;
 }
 .right_main ul li span{
