--- a/Public/law_home/style/comm.css
+++ b/Public/law_home/style/comm.css
@@ -28,10 +28,37 @@ ul, li{list-style: none;margin: 0;padding: 0;}
 	width: 220px;
 	height: 40px;
 	margin-top: 70px;
+	border-radius: 5px;
+	position: relative;
+}
+.header .head .search .search_icon{
+	background-image: url('../icons/search.png');
+	width: 20px;
+	height: 20px;
+	display: block;
+	position: absolute;
+	right: 11px;
+	top: 10px;
+}
+.header .head .search form{
+	height: 100%;
+	width: 100%;
 }
 .header .head .search input{
-	
+	height: 100%;
+	width: 180px;
+	display: block;
+	padding: 7px;
+	padding-left: 4px;
+	margin-left: 5px;
+	font-size: 14px;
+	border: 0;
+	outline: none;
 }
+/*.header .head .search input:focus {*/
+	/*transition: box-shadow .3s;*/
+	/*box-shadow: 0 1px 8px #dde3e7;*/
+/*}*/
 .header .nav{
   height: 60px;
   background-color: #fff;
@@ -42,50 +69,116 @@ ul, li{list-style: none;margin: 0;padding: 0;}
 	line-height: 60px;
 	font-size: 16px;
 	transition: background .3s;
+	position: relative;
 }
 .header .nav li a{
 	text-decoration: none;
 	color: #666;
 	margin: 0 20px;
-	padding: 6px 3px;
-	transition: color .3s;
+	padding: 10px 3px;
 }
-.header .nav li:hover{
-	background-color: #6F0D0C;
-}
-.header .nav li:hover a{
-	color: #fff;
-}
-.header .nav li.active:hover{
-  background-color: #fff;
+.header .nav li.active{
+	background-color: #6F0D0C!important;
 }
 .header .nav li.active a{
+	color: #fff!important;
+	border-bottom: 0!important;
+}
+.header .nav li:hover a{
 	color: #6F0D0C;
 	border-bottom: 2px #A91212 solid;
 }
 
+.header .nav .sub_nav_list{
+	padding: 5px 0;
+	display: none;
+	top: 70px;
+	opacity: 0;
+	background-color: #fff;
+	position: absolute;
+	z-index: 10;
+	opacity: 0;
+}
+.header .nav .sub_nav_list a{
+	display: block;
+	line-height: 1.5;
+	width: 140px;
+	padding: 10px 0;
+	padding-left: 10px;
+	margin: 0;
+	border: none!important;
+}
+.header .nav .sub_nav_list a:hover{
+	background-color: #A91212;
+	color: #fff;
+}
 /*轮播大图*/
 
 .carousel_figure{
 	overflow: hidden;
 	width: 100%;
-	height: 500px;
+	height: 450px;
 	position: relative;
+}
+.carousel_figure:hover #carousel_figure_next,.carousel_figure:hover #carousel_figure_prev{
+	filter: alpha(opacity=40);
+	opacity: 1;
 }
 .carousel_figure #carousel_figure_next, .carousel_figure #carousel_figure_prev{
 	z-index: 10;
 	position: absolute;
-	top: 240px;
+	top: 200px;
 	display: block;
-	background-color: #fff;
-	padding: 10px;
 	cursor: pointer;
+	width: 52px;
+	height: 88px;
+	background: rgb(153,153,153);
+	background: rgba(153,153,153, .4);
+	filter: alpha(opacity=0);
+	opacity: 0;
+	transition-property: background,width,opacity;
+	transition-duration: .5s;
+	line-height: 88px;
+	text-align: center;
+	color: #ddd;
+	color: #fff\9;
+	font-size: 18px;
+}
+.carousel_figure #carousel_figure_next:hover, .carousel_figure #carousel_figure_prev:hover{
+	width: 70px;
+	opacity: 1;
+	filter: alpha(opacity=100);
+	background: #6F0D0C;
 }
 .carousel_figure #carousel_figure_next{
-	left: 10px;
+	left: 0px;
 }
 .carousel_figure #carousel_figure_prev{
-	right: 10px;
+	right: 0px;
+}
+.mod_slide_switch{
+	position: absolute;
+	bottom: 8px;
+	text-align: center;
+	display: block;
+	width: 100%;
+	z-index: 10;
+}
+.slide_switch_item {
+	display: inline-block;
+	height: 1px;
+	padding: 10px 0;
+	margin: 0 5px;
+}
+.slide_switch_item.active i{
+	background-color: #fff;
+}
+.slide_switch_item i{
+	width: 9px;
+	height: 9px;
+	background-color: #aaa;
+	border-radius: 10px;
+	display: block;
 }
 .carousel_figure ul{
 	display: block;
@@ -101,13 +194,20 @@ ul, li{list-style: none;margin: 0;padding: 0;}
 	width: 100%;
 }
 .carousel_figure .focus_text{
-	padding: 20px 40px;
+	padding: 15px 30px;
 	position: absolute;
-	top: 270px;
+	top: 290px;
 	color: #eee;
 	opacity: 0;
 	filter:alpha(opacity=0);
 	max-width: 500px;
+}
+.carousel_figure .focus_text h4{
+	margin-bottom: 10px;
+	font-size: 20px;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	font-family: "Microsoft Yahei";
 }
 .carousel_figure .focus_text p, .carousel_figure .focus_text h4{
 	position: relative;
@@ -120,8 +220,8 @@ ul, li{list-style: none;margin: 0;padding: 0;}
 	left: 0;
 	right: 0;
 	bottom: 0;
-	opacity: .6;
-	filter:alpha(opacity=60);
+	opacity: .7;
+	filter: alpha(opacity=70);
 	z-index: 0;
 	background-color: #000;
 }
