--- a/Apps/Home/View/Public/head.html
+++ b/Apps/Home/View/Public/head.html
@@ -64,26 +64,18 @@
     <div class="nav">
         <div class="container">
             <!-- nav content -->
-<<<<<<< HEAD
             <ul id="nav">
-                <li class="active"><a href="__APP__/Home/Index/index/id/{$navList[0]['class_id']}">{$navList[0]['name']}</a></li>
+                <li class="active"><a href="#">网站首页</a></li>
+                <!--<li class="active"><a href="__APP__/Home/Index/index/id/{$navList[0]['class_id']}">{$navList[0]['name']}</a></li>-->
 
                 <volist name="navList" id="nav" offset="1" >
                     <li>
                         <a href="__APP__/Home/Index/index/id/{$nav.class_id}">{$nav.name}</a>
                         <div class="sub_nav_list">
-                            <a href="#" target="_blank">受助学生风采</a>
+                            <a href="#" target="_blank">测试测试</a>
                             <a href="#" target="_blank">测试测试</a>
                         </div>
                     </li>
-=======
-            <ul>
-                <li class="active"><a href="#">网站首页</a></li>
-                <!--<li class="active"><a href="__APP__/Home/Index/index/id/{$navList[0]['class_id']}">{$navList[0]['name']}</a></li>-->
-
-                <volist name="navList" id="nav" offset="1" >
-                    <li><a href="__APP__/Home/Index/index/id/{$nav.class_id}">{$nav.class_name}</a></li>
->>>>>>> 04257ea6b9deb6de6f34692e3efc60461c53ac4d
                 </volist>
                 <!--<volist name="navList" id="nav" offset="1" length="7">
                     <li><a href="__APP__/Home/{$nav.type}/news/id/{$nav.class_id}">{$nav.name}</a></li>
