--- a/Apps/Home/View/Public/head.html
+++ b/Apps/Home/View/Public/head.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="__PUBLIC__/law_home/style/tui.css">
     <script src="__PUBLIC__/law_home/lib/jquery.min.js" ></script>
     <script src="__PUBLIC__/law_home/lib/respond.js"></script>
-    <title>法学院-淮南师范学院</title>
+    <title>{$title}-淮南师范学院</title>
 </head>
 <body>
 <!-- header -->
