--- a/Apps/Home/View/List/index.html
+++ b/Apps/Home/View/List/index.html
@@ -6,23 +6,22 @@
     <div class="hidden-xs col-lg-3 col-sm-3 col-md-3 left">
       <h2 class="title">学院资讯</h2>
       <ul>
-        <li><a class="active" href="javascript:;">通知公告</a></li>
-        <li><a href="javascript:;">通知公告</a></li>
-        <li><a href="javascript:;">通知公告</a></li>
-        <li><a href="javascript:;">通知公告</a></li>
+        <foreach name="allClass" item="vo" >
+          <li><a <?php if($class['class_id']==$vo['class_id']) echo 'class="active"';?> href="{:U($class['index_template']['url'], ['id'=>$vo['class_id']])}">{$vo['name']}</a></li>
+        </foreach>
       </ul>
     </div>
     <div class="col-xs-12 col-lg-9 col-sm-9 col-md-9 right">
       <div class="right_header">
         <ul class="breadcrumb">
-          <li><a href="#">首页</a>/</li>
-          <li><a href="#">学院资讯</a>/</li>
+          <li><a href="{:U('Home/Index/index')}">首页</a>/</li>
+          <li><a href="#"></a>/</li>
           <li class="active"><span>通知公告</span></li>
         </ul>
       </div>
       <div class="right_main">
         <ul>
-          <foreach name="newsList" item="vo" >
+          <foreach name="list" item="vo" >
             <li>
               <a href="javascript:;" title="{$vo['title']}">{$vo['title']}</a>
               <span>{$vo['addtime']}</span>
