--- a/Apps/Home/View/Public/head.html
+++ b/Apps/Home/View/Public/head.html
@@ -70,7 +70,7 @@
 
                 <volist name="navList" id="nav" offset="1" >
                     <li>
-                        <a href="__APP__/Home/Index/index/id/{$nav.class_id}">{$nav.name}</a>
+                        <a href="__APP__/Home/Index/index/id/{$nav.class_id}">{$nav.class_name}</a>
                         <div class="sub_nav_list">
                             <a href="#" target="_blank">测试测试</a>
                             <a href="#" target="_blank">测试测试</a>
