--- a/Apps/Home/View/Public/head.html
+++ b/Apps/Home/View/Public/head.html
@@ -46,6 +46,7 @@
                 <!-- logo -->
                 <a class="logo" href="#" title="淮南师范学院-法学院">
                     <img src="__PUBLIC__/law_home/img/logo.png" alt="淮南师范学院-法学院" title="淮南师范学院-法学院">
+                    <h2>淮南师范学院法学院</h2>
                 </a>
             </div>
             <div class="right">
