--- a/Public/law_home/style/comm.css
+++ b/Public/law_home/style/comm.css
@@ -15,6 +15,19 @@ ul, li{list-style: none;margin: 0;padding: 0;}
 .header .head .logo{
 	display: block;
 }
+.header .head .logo img{
+	float: left;
+	margin-right: 20px;
+	width: 100px;
+	height: 100px;
+}
+.header .head .logo h2{
+	font-family: 'Microsoft YaHei';
+	color: #fff;
+	font-size: 32px;
+	float: left;
+	margin-top: 26px;
+}
 .header .head .left{
   float: left;
   margin-top: 30px;
