--- a/Apps/Home/View/Public/head.html
+++ b/Apps/Home/View/Public/head.html
@@ -65,9 +65,18 @@
             <!-- nav content -->
             <ul id="nav">
                 <li class="active"><a href="#">网站首页</a></li>
-                <!--<li class="active"><a href="__APP__/Home/Index/index/id/{$navList[0]['class_id']}">{$navList[0]['name']}</a></li>-->
-
-                <volist name="navList" id="nav" offset="1" >
+                    <volist name="navList" id="vo" >
+                        <li><a href="{:U($vo['index_template']['url'], ['id'=>$vo['class_id']])}">{$vo['name']}</a></li>
+                           <!-- <div class="sub_nav_list">
+                                <notempty name="vo.child">
+                                    <foreach name="vo" item="val">
+                                        <a href="{:U($vo['index_template']['url'], ['id'=>$val['class_id']])}">{$val['name']}</a>
+                                    </foreach>
+                                </notempty>
+                            </div>-->
+                        </li>
+                    </volist>
+                <!-- <volist name="navList" id="nav" >
                     <li>
                         <a href="__APP__/Home/Index/index/id/{$nav.class_id}">{$nav.class_name}</a>
                         <div class="sub_nav_list">
@@ -75,10 +84,9 @@
                             <a href="#" target="_blank">测试测试</a>
                         </div>
                     </li>
-                </volist>
-                <!--<volist name="navList" id="nav" offset="1" length="7">
-                    <li><a href="__APP__/Home/{$nav.type}/news/id/{$nav.class_id}">{$nav.name}</a></li>
                 </volist>-->
+
+
 
             </ul>
         </div>
