--- a/Public/law_home/style/content.css
+++ b/Public/law_home/style/content.css
@@ -7,7 +7,6 @@
 /* content */
 .content{
   margin: 40px 0;
-  min-height: 300px;
   overflow: hidden;
 }
 .content .left{
@@ -15,7 +14,6 @@
   word-wrap:break-word;
   background: #fff;
   padding: 0;
-  min-height: 500px;
 }
 .content .left .title{
   margin: 0;
@@ -85,6 +83,7 @@
   padding-left: 20px;
 }
 .right_main ul li{
+  display: block;
   font-size: 14px;
   font-family: 'Microsoft YaHei';
   list-style: disc inside;
