--- a/Apps/Home/View/Index/index.html
+++ b/Apps/Home/View/Index/index.html
@@ -294,6 +294,9 @@
         $('#carousel_figure_prev').click(function(){
           toggle(-1);
         })
+        setInterval(function () {
+            toggle(-1);
+        }, 5000)
       })
 
     </script>
