--- a/Apps/Home/View/List/index.html
+++ b/Apps/Home/View/List/index.html
@@ -1,5 +1,7 @@
 <include file="./Apps/Home/View/Public/head.html" />
 <link rel="stylesheet" href="__PUBLIC__/law_home/style/content.css">
+<!-- big Img -->
+<div class="big_img"></div>
 <!-- content -->
 <div class="content">
   <div class="container">
