--- a/Public/law_home/style/comm.css
+++ b/Public/law_home/style/comm.css
@@ -1,6 +1,6 @@
 /* Initialization */
 body{
-  background-color: #e5e5e5;
+  background-color: #f3f3f3;
 }
 ul, li{list-style: none;margin: 0;padding: 0;}
 ::selection{
