--- a/Apps/Home/View/Index/index.html
+++ b/Apps/Home/View/Index/index.html
@@ -96,7 +96,7 @@
       </div>
       <div class="col-md-4 col-lg-4 col-sm-6  hidden-xs content_list_box_bg">
         <div class="content_box_bg">
-          <h2 class="title">通知公告</h2>
+          <h2 class="title"><a href="#">通知公告</a></h2>
           <div class="notice_container">
             <ul class="content_list_bg" id="notice">
               <volist name="noticeList" id="notic" empty="没有数据">
