--- a/Public/law_home/style/index.css
+++ b/Public/law_home/style/index.css
@@ -70,10 +70,16 @@
   color: #666;
 }
 .content_box_bg .title{
-  font-family: 'Microsoft YaHei';
   background-color: #6F0D0C;
-  color: #fff;
   padding: 10px;
+}
+.content_box_bg .title a{
+  text-decoration: none;
+  font-family: 'Microsoft YaHei';
+  display: block;
+  width: 100%;
+  height: 100%;
+  color: #fff;
   font-size: 18px;
 }
 .content_box_bg .notice_container{
