'列表页分页功能'

--- a/Apps/Home/View/List/index.html
+++ b/Apps/Home/View/List/index.html
@@ -41,13 +41,7 @@
         </ul>
         <!-- 分页 -->
         <div class="page_body">
-          <ol class="page">
-            <li><a href="javascript:;">上一页</a></li>
-            <li><a class="active" href="javascript:;">1</a></li>
-            <li><a href="javascript:;">2</a></li>
-            <li><a href="javascript:;">3</a></li>
-            <li><a href="javascript:;">下一页</a></li>
-          </ol>
+          {$page}
         </div>
       </div>
     </div>
