--- a/Public/law_home/style/index.css
+++ b/Public/law_home/style/index.css
@@ -72,15 +72,19 @@
 .content_box_bg .title{
   background-color: #6F0D0C;
   padding: 10px;
-}
-.content_box_bg .title a{
-  text-decoration: none;
   font-family: 'Microsoft YaHei';
   display: block;
-  width: 100%;
-  height: 100%;
   color: #fff;
   font-size: 18px;
+  position: relative;
+}
+.content_box_bg .title a{
+  position: absolute;
+  right: 15px;
+  top: 14px;
+  color: #fff;
+  font-size: 12px;
+  font-weight: normal;
 }
 .content_box_bg .notice_container{
   position: absolute;
@@ -263,3 +267,7 @@
   color: #fff;
   font-weight: 600;
 }
+
+.floadAd { position: absolute;z-index: 999900; display: none; }
+.floadAd .item { display: block; }
+.floadAd .item img { vertical-align: bottom; }/* a img 的组合浏览器默认下边会有几个像素的空白，这里可以消除空白*/
