--- a/Apps/Home/View/Public/head.html
+++ b/Apps/Home/View/Public/head.html
@@ -15,17 +15,19 @@
             $('#nav>li').hover(function () {
                 var $list = $(this).find('.sub_nav_list')
                 $list.css('display', 'block');
-                $(this).find('.sub_nav_list').animate({
+                $list.stop().animate({
                     'opacity': 1,
                     'top': '60px'
                 }, 200)
             }, function () {
                 var $list = $(this).find('.sub_nav_list')
-                $(this).find('.sub_nav_list').animate({
+                $list.stop().animate({
                     'opacity': 0,
                     'top': '70px'
                 }, 200, function () {
-                    $list.css('display', 'none');
+                    if($list.css('top') == '70px'){
+                        $list.css('display', 'none');
+                    }
                 })
             })
             // 搜索
