--- a/Apps/Home/View/Index/index.html
+++ b/Apps/Home/View/Index/index.html
@@ -97,7 +97,7 @@
         <div class="content_box_bg">
           <h2 class="title">
             {$noticeClass['name']}
-            <a href="{:U($noticeClass['index_template']['url'], ['id'=>$noticeClass['class_id']])}">更多</a>
+            <a target="_blank" href="{:U($noticeClass['index_template']['url'], ['id'=>$noticeClass['class_id']])}">更多</a>
           </h2>
           <div class="notice_container">
             <ul class="content_list_bg" id="notice">
