--- a/Public/law_home/style/index.css
+++ b/Public/law_home/style/index.css
@@ -23,11 +23,14 @@
   font-family: 'Microsoft YaHei';
   float: left;
 }
-.content_list_box .content_box .title a{
+.content_list_box .content_box .title a, .content_news_box .title a{
   float: right;
-  color: #666;
+  color: #666!important;
+  line-height: 30px;
+  font-size: 12px;
+  font-weight: normal;
 }
-.content_list_box .content_box .title a:hover{
+.content_list_box .content_box .title a:hover, .content_news_box .title a{
   color: #6F0D0C;
 }
 .content_box .content_list, .content_list_bg{
