--- a/Apps/Admin/View/Public/meta.html
+++ b/Apps/Admin/View/Public/meta.html
@@ -1,5 +1,5 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>安徽博联电力有限公司</title>
+<title>淮南师范学院-法学院</title>
 <meta name="author" content="" />
 <meta name="description" content=""/>
 <meta name="keywords" content="" />
