--- a/Apps/Home/View/Index/index.html
+++ b/Apps/Home/View/Index/index.html
@@ -147,19 +147,18 @@
           </ul>
         </div>
       </div>
-      <!-- 党团工作 -->
+      <!-- 党团建设 -->
       <div class="col-md-4 col-lg-4 hidden-sm col-xs-12 content_list_box">
         <div class="content_box">
           <div class="title">
-            <h2>党团工作</h2>
-            <a href="__APP__/Home/List/news/id/{$dtgz[0]['class_id']}">更多</a>
+            <h2>{$dtjsClass['name']}</h2>
+            <a href="{:U($dtjsClass['index_template']['url'], ['id'=>$dtjsClass['class_id']])}">更多</a>
           </div>
           <ul class="content_list">
-
-            <volist name="dtgz" id="teach" offset="0" empty="没有数据">
+            <volist name="dtjsList" id="dtjs" offset="0" empty="没有数据">
               <li>
-                <a href="__APP__/Home/Content/article/id/{$teach.content_id}" title="{$teach.title}">{$teach.title}</a>
-                <span>{$teach.uptime|time_tran=###}</span>
+                <a href="{:U($dtjsClass['content_template']['url'], ['id'=>$dtjs['content_id']])}" title="{$dtjs.title}">{$dtjs.title}</a>
+                <span>{$dtjs.uptime|time_tran=###}</span>
               </li>
             </volist>
 
