--- a/Apps/Home/View/Public/head.html
+++ b/Apps/Home/View/Public/head.html
@@ -9,7 +9,7 @@
     <script src="__PUBLIC__/law_home/lib/respond.js"></script>
 
     <![endif]-->
-    <title>{$title} - 淮南师范学院</title>
+    <title>{$title} - {$webInfo['WEBNAME']}</title>
     <script>
         $(function () {
             $('#nav>li').hover(function () {
