--- a/Apps/Admin/View/Public/header.html
+++ b/Apps/Admin/View/Public/header.html
@@ -8,7 +8,7 @@
     <div class="navbar-inner">
       <div class="container-fluid">
         <a class="brand" href="__APP__/Admin/Index/index">
-          <span class="icon10">安徽博联电子工程有限公司后台管理系统</span>
+          <span class="icon10">淮南师范学院-法学院-后台管理系统</span>
         </a>
         <div class="nav-no-collapse">
           <ul class="nav">
