完善搜索功能

--- a/Apps/Home/View/Public/head.html
+++ b/Apps/Home/View/Public/head.html
@@ -56,7 +56,7 @@
             <div class="right">
                 <!-- search -->
                 <div class="search">
-                    <form id="search_form" action="" method="">
+                    <form id="search_form" action="{:U('Home/Search/search')}" method="GET">
                         <input id="search_input" placeholder="请输入关键字搜索.." type="text" name="keyword">
                         <i class="search_icon"></i>
                     </form>
